FullQa New/src/objects/Excise_Product_Code1__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excise_Country_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Excise Country Code</label>
        <referenceTo>Excise_Country_Code__c</referenceTo>
        <relationshipLabel>Excise Product Codes</relationshipLabel>
        <relationshipName>Excise_Product_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Excise_Jurisdiction_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Excise Jurisdiction Code</label>
        <referenceTo>Excise_Jurisdiction_Code__c</referenceTo>
        <relationshipLabel>Excise Product Codes</relationshipLabel>
        <relationshipName>Excise_Product_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Excise_Return_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Excise Return Code</label>
        <referenceTo>Excise_Return_Codes_Object__c</referenceTo>
        <relationshipLabel>Excise Product Codes</relationshipLabel>
        <relationshipName>Excise_Product_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Excise_TaxPayer_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Excise TaxPayer Type</label>
        <referenceTo>Excise_TaxPayer_Type__c</referenceTo>
        <relationshipLabel>Excise Product Codes</relationshipLabel>
        <relationshipName>Excise_Product_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obsolete_Date__c</fullName>
        <label>Obsolete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Returns Excise</fullName>
                </value>
                <value>
                    <fullName>AvaTax Excise</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Code_Description__c</fullName>
        <formula>Excise_Return_Code__r.Excise_Return_Code_Description__c</formula>
        <label>Return Code Description</label>
        <type>Text</type>
    </fields>
    <label>Excise Product Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Excise_Return_Code__c</columns>
        <columns>Return_Code_Description__c</columns>
        <columns>Excise_Country_Code__c</columns>
        <columns>Excise_Jurisdiction_Code__c</columns>
        <columns>Excise_TaxPayer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AvaTax_Excise</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>AvaTax Excise</value>
        </filters>
        <label>AvaTax Excise</label>
    </listViews>
    <listViews>
        <fullName>Return_Excise</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Excise_Return_Code__c</columns>
        <columns>Return_Code_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Returns Excise</value>
        </filters>
        <label>Returns Excise</label>
    </listViews>
    <nameField>
        <label>Excise Product Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excise Product Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>